Fixed few sonar qube errors